# QTchat

./: readme.md
ChatStructs/: CMakeLists.txt  ChatStructs_global.h  message.cpp  message.h  messagewidget.cpp  messagewidget.h  messagewidget.ui  user.cpp  user.h  useritem.cpp  useritem.h  userwidget.cpp  userwidget.h  userwidget.ui  widgetlabel.cpp  widgetlabel.h  widgetlist.cpp  widgetlist.h  widgetlist.ui
Client/: CMakeLists.txt  server.ini
Client/Auth/: auth.cpp  auth.h  auth.ui
Client/Client/: client.cpp  client.h
Client/MainWindow/: commands.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagescontainer.cpp  messagescontainer.h  userscontainer.cpp
Client/Strings/: strings.cpp  strings.h
Client/translations/: qtChat_ru.qm  qtChat_ru.ts
DBdump/: 17.10.2023_18_40.sql  dump-qt_chat-202309300206-postgres  qt_chat.sql
Misc/: CircularQueue.h  SHA1.cpp  SHA1.h  circularqueue.h  flags.h  misc.cpp  misc.h
Network/: CMakeLists.txt  network.h
Server/: CMakeLists.txt  app.h  readme.md  server.ini  strings.cpp  strings.h
Server/Console/: console.cpp  console.h
Server/DB/: db.cpp  db.h
Server/MainWindow/: main.cpp  mainthread.cpp  mainthread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagescontainer.cpp  userscontainer.cpp  userscontainer.h
Server/Server/: server.cpp  server.h
Server/ServerSettings/: serversettings.cpp  serversettings.h  serversettings.ui
Server/Strings/: strings.cpp  strings.h
Server/translations/: my_ru.ts  qtChat_ru.qm  qtChat_ru.ts
